--- a/main.css
+++ b/main.css
@@ -15,6 +15,14 @@ h6 {
     font-size: 2rem;
 }
 
+pre {
+    /* padding: 0 10px; */
+    height: 350px;
+    position:relative;
+    padding: 0 20px;
+	margin: .5em 0;
+}
+
 pre,
 code {
     font-family: monospace, monospace;
@@ -22,29 +30,38 @@ code {
 
 pre>code {
     display: block;
-    padding: 1rem;
-    word-wrap: normal;
+    padding: 0;
+    margin:0;
+    word-wrap: break-word;
 }
 
 code {
-    height: 200px;
-    overflow-wrap: normal;
+    position:absolute;
+    top:0;
+    right:0;
+    height: 350px;
+    width:860px;
+    padding: 0;
+    margin:0;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
     overflow-y: auto;
 }
 
-code,
+pre,
 input,
 button {
     background-color: rgb(42, 32, 32);
     color: #ffffff;
-    padding: 2px;
     border: solid 2px #ffffff;
     border-radius: 5px;
+    /* margin-bottom:30px; */
 }
 
 input,
 button {
     font-size: 1.5rem;
+    padding: 5px;
 }
 
 input {
@@ -56,8 +73,10 @@ button {
 }
 
 .container {
+    width: 900px;
     display: grid;
     justify-items: stretch;
+    margin: auto auto;
 }
 
 .arena {
